Ajuste hearder para tablet

--- a/index.html
+++ b/index.html
@@ -36,9 +36,39 @@
                 </li>
             </ul>
             <img class="container__imagem" src="img/logo-alurabooks.svg" alt="Logo da Alurabooks">
+            <h1 class="container__titulo"><b class="container__titulo-negrito">Alura</b>books</h1>
         </div>
+
+        <ul class="opcoes">
+            <input class="opcoes__botao" type="checkbox" name="opcoes-menu" id="opcoes-menu">
+            <label for="opcoes-menu">
+                <li class="opcoes__item">Categorias</li>
+            </label>
+
+            <ul class="lista-menu">
+                <li class="lista-menu__item">
+                    <a class="lista-menu__link" href="#">Programação</a>
+                </li>
+                <li class="lista-menu__item">
+                    <a class="lista-menu__link" href="#">Front-end</a>
+                </li>
+                <li class="lista-menu__item">
+                    <a class="lista-menu__link" href="#">Infraestrutura</a>
+                </li>
+                <li class="lista-menu__item">
+                    <a class="lista-menu__link" href="#">Business</a>
+                </li>
+                <li class="lista-menu__item">
+                    <a class="lista-menu__link" href="#">Design & UX</a>
+                </li>
+            </ul>
+
+            <li class="opcoes__item"><a class="opcoes__link" href="#">Favoritos</a></li>
+            <li class="opcoes__item"><a class="opcoes__link" href="#">Minha Estante</a></li>
+        </ul>
         <div class="container">
-            <a class="container__imagem" href="#"><img src="img/Favoritos.svg" alt="Ícone Favoritos"></a>
+            <a class="container__imagem container__imagem-transparente" href="#"><img src="img/Favoritos.svg"
+                    alt="Ícone Favoritos"></a>
             <a class="container__imagem" href=""><img src="img/Compras.svg" alt="Ícone Compras"></a>
             <a class="container__imagem" href="#"><img src="img/Usuario.svg" alt="Ícone perfil"></a>
         </div>
